--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "export": "next export"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^1.0.6",
+    "clsx": "^1.2.1",
     "cypress": "^10.0.3",
-    "next": "^12.1.5",
+    "flowbite": "^1.4.7",
+    "flowbite-react": "^0.1.3",
+    "next": "^12.2.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.11.1"
+    "@netlify/plugin-nextjs": "^4.11.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.5"
   }
 }
